# metag_partitioning

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README  README.md  TODO
data/: natural.fastq  natural.fastq.out.gold.REMOVED.git-id  sampleBig.fastq.REMOVED.git-id  sampleBig.fastq.out.gold.REMOVED.git-id  test.medium.fastq.out.gold  test.small.fastq  test.small.fastq.out.gold  test.small2.fastq  test.small3.fastq
ext/graph500/generator/: CMakeLists.txt  generator_test_mpi  generator_test_mpi.REMOVED.git-id  libgraph_generator_mpi.a.REMOVED.git-id  splittable_mrg.o.REMOVED.git-id
include/: argvparser.h  build_unique_tuples.hpp  ccl.hpp  configParam.hpp  configPath.hpp  graph500-utils.hpp  packedRead.hpp  parallel_fastq_iterate.hpp  postProcess.hpp  preProcess.hpp  read_graph_utils.hpp  sortTuples.hpp  utils.hpp
src/: CMakeLists.txt  assembly.cpp  build_Kmer_tuples.cpp  filter_high_abundance_test.cpp  getHistogram.cpp  logSort.cpp  logSortGraph500.cpp  log_sort.cpp  parallel_fastq_iterate.cpp  run_fastq_iterate.cpp  sort_merge_tuples.cpp  sort_merge_tuples_equal_kmers.cpp  sort_merge_tuples_equal_partitions.cpp  sort_merge_tuples_inactive_partitions.cpp  sort_merge_tuples_interior_kmers.cpp  statAndCompare.cpp
